flapivor/tests/m3/hopix/typechecker/good/52-assign.hopix
val x : Ref<Int> = ref (0)

val main : Unit =
    x := 1