flapivor/tests/m3/hopix/typechecker/bad/76-if-then-else-01.hopix
val main : Unit =
    if true then 0 else 1